--- a/client.html
+++ b/client.html
@@ -11,45 +11,60 @@
 </head>
 
 <body>
+    <template>
+        <div class="template_login">
+            <div class="login_form">
+                <h1 id="title">sign Up</h1>
+                <form>
+                    <div class="input_group">
+                        <div class="input_field" id="name_field">
+                            <i class="fa-solid fa-user"></i>
+                            <input type="text" placeholder="Name">
+                        </div>
 
-    <div class="template_login">
-        <div class="login_form">
-            <h1 id="title">sign Up</h1>
-            <form>
-                <div class="input_group">
-                    <div class="input_field" id="name_field">
-                        <i class="fa-solid fa-user"></i>
-                        <input type="text" placeholder="Name">
+                        <div class="input_field">
+                            <i class="fa-solid fa-envelope"></i>
+                            <input type="email" placeholder="Email">
+                        </div>
+
+                        <div class="input_field">
+                            <i class="fa-solid fa-lock"></i>
+                            <input type="password" placeholder="Password">
+                        </div>
+
+                        <p id="lost_pas_p">Lost password <a href="#">Click Here!</a></p>
                     </div>
-
-                    <div class="input_field">
-                        <i class="fa-solid fa-envelope"></i>
-                        <input type="email" placeholder="Email">
+                    <div class="button_field">
+                        <button type="button" id="sign_up_button">Sign up</button>
+                        <button type="button" id="sign_in_button" class="disable">Sign in</button>
                     </div>
-
-                    <div class="input_field">
-                        <i class="fa-solid fa-lock"></i>
-                        <input type="password" placeholder="Password">
-                    </div>
-
-                    <p>Lost password <a href="#">Click Here!</a></p>
-                </div>
-                <div class="button_field">
-                    <button type="button" id="sign_up_button">Sign up</button>
-                    <button type="button" id="sign_in_button" class="disable">Sign in</button>
-                </div>
-            </form>
+                </form>
+            </div>
         </div>
-
-    </div>
-
-    <template id="template_signup">
-    
     </template>
 
+    <template>
+        <div class="template_home">
+            <h1>My To Do List</h1>
+            <form action="">
+                <input type="text" id="todo_input" class="todo_input">
+                <button id="todo_button" class="todo_button" type="submit">
+                    <i class="fa-solid fa-plus"></i>
+                </button>
 
-    <template id="template_home">
-    
+                <div class="div_select">
+                    <select name="todos" class="todo_filter">
+                        <option value="all">All</option>
+                        <option value="completed">Completed</option>
+                        <option value="incomplete">Incomplete</option>
+                    </select>
+                </div>
+            </form>
+
+            <div class="todo_container">
+                <ul class="todo_list"></ul>
+            </div>
+        </div>
     </template>
 
     <script src="client.js" type="text/javascript"></script>
